# plinko-rs

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FLAKY_TESTS.md  LICENSE  Plinko PIR tutorial.md  README.md  bench_hints_linux_amd64  findings.md  key.pub
.beads/: issues.jsonl
.devin/: wiki.json
.githooks/: commit-msg  prepare-commit-msg
.github/: branch-protection-main.json  pull_request_template.md
.github/workflows/: ci.yml  commit-lint.yml  formal.yml  kani.yml  local-e2e-smoke.yml  pages.yml
backlog/: config.yml
backlog/tasks/: task-1 - Use-bitmap-representation-for-hint-block-sets-during-hint-generation.md  task-10 - Add-dedicated-non-CT-contains-to-BlockBitset.md  task-11 - Fix-bench_size_comparison-allocation-inside-timed-region.md  task-12 - Resolve-consolidated-roborev-findings.md  task-2 - Replace-HintSlot-subset_blocks-with-seed-based-recomputation-complement-bit.md  task-3 - Add-memory-benchmarks-for-hint-generation-and-client-storage.md  task-4 - Add-regression-tests-for-block-set-representation-changes.md  task-5 - Cache-expanded-block-sets-on-HintSlot-in-protocol-Client.md  task-6 - Deduplicate-test-helpers-for-block-subset-functions.md  task-7 - Minor-cleanups-from-116-review.md  task-8 - Add-integration-test-for-apply_updates-through-complemented-slot.md  task-9 - Use-mem-take-in-promote_backup-to-avoid-clone.md
data/mainnet-pir-data-v3/: SOURCE.txt  metadata.json
docs/: API_ENDPOINTS.md  ARCHITECTURE.md  BENCHMARK_RESULTS.md  CUDA_OPTIMIZATION.md  DEPLOYMENT.md  FEATURE_FLAGS.md  KANBAN_OPTIMIZATION.md  Plinko.v  README.md  alex_hoover_plinko_talk_transcript.json  benchmarks.md  codex-cloud-verification.md  constant_time_mode.md  data_format.md  gpu_benchmark_commands.md  gpu_hint_benchmark_2026-01-23.md  gpu_hint_benchmark_2026-01-24.md  gpu_hint_benchmark_2026-01-24_chacha12.md  hint_generation.md  kani-verification-results.md  llm-guided-optimization-framework.md  op.md  perf_kanban.md  plinko_paper_index.json  plinko_paper_part1_metadata.json  plinko_paper_part2_technical.json  plinko_paper_part3_scheme.json  plinko_paper_part4_comparisons.json  plinko_paper_part5_references.json  plinko_paper_part6_algorithms.json  protocol-visualization.html  protocol_overview.md  update_strategy.md  verification.md  xof-optimization.md
docs/archived/: API_ENDPOINTS.md  README.md  compression_benchmark.md  data-oblivious-iprf-tee.md  findings_2025-11-23.md  kani-verification-results.md  perf_kanban.md  xof-optimization.md
docs/issues/: data-oblivious-iprf-tee.md
docs/optimization/: COMPACTION_40B_32B.md  EXPANSION_40B_48B.md  sort_stream_calc.md
docs/plans/: 2026-01-29-readme-split-design.md
experiments/sr_optimization/: README.md  analyze.py  harness.py  llm_proposer.py
plinko/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
plinko-extractor/: Cargo.toml
plinko/benches/: memory_bench.rs
plinko/cuda/: hint_kernel.cu
plinko/docs/: delta-format.md
plinko/formal/: .lia.cache  .nia.cache  Makefile  README.md  new_proof.txt  streaming_proof_patch.txt
plinko/formal/docs/: TRUST_BASE.md
plinko/formal/linking/: .IprfLink.aux  IprfLink.v  types.v
plinko/formal/proofs/: .DbProofs.aux  .IprfConcrete.aux  .IprfProofs.aux  .PrpBridge.aux  .SwapOrNotProofs.aux  DbProofs.glob  DbProofs.v  DbProofs.vo  IprfConcrete.glob  IprfConcrete.vo  IprfProofs.glob  IprfProofs.v  IprfProofs.vo  PrpBridge.glob  PrpBridge.v  PrpBridge.vo  SwapOrNotProofs.glob  SwapOrNotProofs.v  SwapOrNotProofs.vo
plinko/formal/sims/: .HintInitSim.aux  .IprfSim.aux  .SimTypes.aux  .SwapOrNotSim.aux  HintInitSim.glob  HintInitSim.v  HintInitSim.vo  IprfSim.glob  IprfSim.v  IprfSim.vo  SimTypes.glob  SimTypes.v  SimTypes.vo  SwapOrNotSim.glob  SwapOrNotSim.v  SwapOrNotSim.vo
plinko/formal/specs/: .BinomialSpec.aux  .CommonTypes.aux  .DbSpec.aux  .IprfSpec.aux  .SwapOrNotSpec.aux  .lia.cache  BinomialSpec.glob  BinomialSpec.v  BinomialSpec.vo  CommonTypes.glob  CommonTypes.v  CommonTypes.vo  DbSpec.glob  DbSpec.v  DbSpec.vo  IprfSpec.glob  IprfSpec.v  IprfSpec.vo  SwapOrNotSpec.glob  SwapOrNotSpec.v  SwapOrNotSpec.vo  SwapOrNotSrSpec.v  TrueBinomialSpec.v
plinko/src/: binomial.rs  constant_time.rs  db.rs  gpu.rs  iprf.rs  lib.rs  protocol.rs  schema40.rs  schema48.rs
plinko/tests/: ct_hintinit_test.rs  protocol_e2e_test.rs
regression-data/: README.md  database.bin.partaa  database.bin.partab  metadata.json
scripts/: differential_e2e_reference.sh  differential_protocol_transcript.sh  local_e2e_hint_pipeline.sh  modal_bench.py  modal_bench_distributed.py  modal_bench_mainnet.py  modal_run_bench.py  modal_upload_data.py  reference_plinko_scenario.py  setup-hooks.sh  test_commit_hooks.sh
src/: main.rs
state-syncer/: Cargo.toml  Dockerfile
state-syncer/docs/: delta-format.md
state-syncer/formal/: .gitignore  Makefile  README.md
state-syncer/formal/linking/: types.v
state-syncer/formal/proofs/: IprfConcrete.v  SwapOrNotProofs.v
state-syncer/formal/sims/: README.md  SimTypes.v
state-syncer/formal/specs/: BinomialSpec.v  SwapOrNotSpec.v  SwapOrNotSrSpec.v
state-syncer/proptest-regressions/: iprf.txt  kani_proofs.txt
state-syncer/src/: address_mapping.rs  binomial.rs  config.rs  constant_time.rs  db.rs  iprf.rs  kani_proofs.rs  lib.rs  main.rs  rpc.rs  update_manager.rs
state-syncer/tests/: ct_hintinit_test.rs
tee-test/: 01-verify-sev-snp.sh  02-install-packages.sh  03-download-image.sh  04-create-vm.sh  05-copy-data-to-vm.sh  README.md  SEV-SNP-BENCHMARK.md  run-benchmark.sh
(+8 files in other folders)
