[package]
name = "plinko-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "plinko"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"

# Ethereum / Reth
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.1" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.1" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.1" }
alloy-primitives = "0.8"
alloy-rlp = "0.3"

# Serialization
byteorder = "1.5"
chrono = "0.4"

# Local crates
plinko = { path = "plinko" }

[workspace]
members = ["plinko"]
