[package]
name = "plinko"
version = "0.1.0"
edition = "2021"
description = "Plinko PIR cryptographic primitives - invertible PRF, binomial sampling, constant-time operations"
license = "MIT"
repository = "https://github.com/igor53627/plinko-rs"
keywords = ["pir", "cryptography", "privacy", "ethereum"]
categories = ["cryptography", "algorithms"]

[features]
default = ["logging"]
parallel = ["rayon"]
btpe = []
profiling = ["pprof"]
batch_iprf = []
cuda = ["dep:cudarc", "dep:bytemuck"]
logging = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
eyre = "0.6"
indicatif = "0.17"
sha2 = "0.10"
blake3 = "1.5"
rayon = { version = "1.10", optional = true }
aes = "0.8"
ctr = "0.9"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
memmap2 = "0.9"
tiny-keccak = { version = "2.0", features = ["keccak"] }
puruspe = "0.4"
once_cell = "1.19"
pprof = { version = "0.13", optional = true, features = ["flamegraph"] }
cudarc = { version = "0.12", optional = true, features = ["cuda-version-from-build-system"] }
bytemuck = { version = "1.14", optional = true, features = ["derive"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
proptest = "1.4"

# Kani configuration for formal verification
[package.metadata.kani]
# No special flags needed

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
