[package]
name = "state-syncer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6"
axum = "0.7"
reqwest = { version = "0.11", features = ["json", "blocking"] }
indicatif = "0.17"
hex = "0.4"
sha2 = "0.10"
blake3 = "1.5"
rayon = "1.10"
aes = "0.8"
ctr = "0.9"
rand = "0.8"
memmap2 = "0.9"
futures = "0.3"

[dev-dependencies]
proptest = "1"
# Use manual RPC for now to avoid c-kzg conflicts with reth
# alloy-primitives = "0.8"
# alloy-rpc-types = "0.8"
